refactor(core,category): replace index-based list access with `getFirst`